[package]
name = "rust_ofp"
version = "0.2.1"
authors = ["Sam Baxter <sbaxter@cs.umass.edu>"]

description = "Rust OpenFlow 0x01 Protocol and Controller Framework"

documentation = "https://baxtersa.github.io/rust_ofp/docs"
repository = "https://github.com/baxtersa/rust_ofp"
readme = "README.md"

keywords = ["SDN", "Networking", "OpenFlow"]
license = "MIT"

exclude = [
        "scripts/*",
        ".travis.yml",
        ".gitignore",
]

[lib]
name = "rust_ofp"
path = "src/lib.rs"

[[bin]]
name = "rust_ofp_controller"
path = "src/main.rs"

[dependencies]
log = "0.4"
log4rs = "0.8.0"
log-panics = "2.0.0"
byteorder = "1.0.0"
tokio = "0.1"
futures = "0.1"
bytes = "0.4"
